# computational-semantics

./: README.md  netlify.toml  pyproject.toml
nlp_semantics/: __init__.py  cli.py  lexicon.py  semantics.py
tests/: test_semantics.py
webapp/: index.html  package.json
webapp/src/: App.jsx  index.css  semantics.js  semantics.ts
